Remove duplications in db steps